# public-ollama-finder

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: disclaimer.rs  main.rs
