[package]
name = "public-ollama-finder"
version = "1.4.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
ipnet = "2.9"
csv = "1.3"
console = "0.15"
indicatif = "0.17"
futures = "0.3"
anyhow = "1.0"
ctrlc = "3.4"
async-trait = "0.1"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.27"
